# devcontainer-CPP-GTK4-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  set_uid.sh
src/: main.cpp
